# burn_human

./: .gitignore  Cargo.toml  README.md  Taskfile.yml  install_python_mods.cmd
.github/workflows/: deploy-pages.yml  deploy.yml  test.yml
assets/shaders/: mcbaise_tube.wgsl
bench/: forward.rs  modes.rs
crates/bevy_Mcbaise_Palee_Regard_Absurdia_Fantasmagoria/: Cargo.toml  README.md
crates/bevy_Mcbaise_Palee_Regard_Absurdia_Fantasmagoria/src/: main.rs
crates/bevy_Mcbaise_Palee_Regard_Absurdia_Fantasmagoria/www/: index.html
crates/bevy_burn_human/: Cargo.toml
crates/bevy_burn_human/src/: lib.rs  main.rs
crates/bevy_burn_human/www/: index.html
src/: lib.rs
src/data/: reference.rs
tests/: reference_forward.rs
tool/scripts/: export_reference.py  make_favicon_ico.py
