[package]
name = "burn_human"
description = "parametric human mesh pipeline"
version = "0.1.0"
edition = "2024"
authors = ["mosure <mitchell@mosure.me>"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/mosure/burn_human"
repository = "https://github.com/mosure/burn_human"
readme = "README.md"
exclude = [
  ".devcontainer",
  ".github",
  "docs",
  "dist",
  "build",
  "assets",
  "credits",
]

[workspace]
members = [
  "crates/bevy_burn_human",
  "tool",
]
resolver = "2"


[features]
default = []

[dependencies]
burn = { version = "0.19", default-features = false, features = ["std", "ndarray"], optional = true }
safetensors = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
bytemuck = { version = "1.18", features = ["derive"] }


[dev-dependencies]
criterion = "0.8"


[[bench]]
name = "forward"
harness = false
path = "bench/forward.rs"
