[package]
name = "burn_human"
description = "parametric human mesh pipeline (fork)"
version = "0.1.0"
edition = "2024"
authors = ["Dave Horner", "mosure <mitchell@mosure.me>"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/davehorner/bevy_Mcbaise_Palee_Regard_Absurdia_Fantasmagoria"
repository = "https://github.com/davehorner/bevy_Mcbaise_Palee_Regard_Absurdia_Fantasmagoria"
readme = "README.md"
exclude = [
  ".devcontainer",
  ".github",
  "docs",
  "dist",
  "build",
  "assets",
  "credits",
]

[workspace]
members = [
  "crates/bevy_burn_human",
  "crates/bevy_Mcbaise_Palee_Regard_Absurdia_Fantasmagoria",
  "tool",
]
resolver = "2"


[patch.crates-io]
burn_human = { path = "." }
bevy_burn_human = { path = "crates/bevy_burn_human" }


[profile.wasm-release]
inherits = "release"
# Wasm builds can trigger LLVM OOM on some machines at opt-level=3.
opt-level = 2
lto = false
codegen-units = 16
debug = 0


[features]
default = []

[dependencies]
burn = { version = "0.19", default-features = false, features = ["std", "ndarray"], optional = true }
safetensors = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
bytemuck = { version = "1.18", features = ["derive"] }


[dev-dependencies]
criterion = "0.8"


[[bench]]
name = "forward"
harness = false
