[package]
name = "bevy_burn_human"
description = "bevy plugin for burn_human morphable models"
version = "0.3.0"
edition = "2024"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/mosure/burn_human"
repository = "https://github.com/mosure/burn_human"
publish = true

[features]
default = ["native"]
native = ["bevy/multi_threaded"]

[dependencies]
bevy = { version = "0.17", default-features = false, features = [
    "bevy_asset",
    "bevy_camera",
    "bevy_core_pipeline",
    "bevy_gizmos",
    "bevy_gltf",
    "bevy_image",
    "bevy_log",
    "bevy_light",
    "bevy_mesh",
    "bevy_pbr",
    "bevy_render",
    "bevy_post_process",
    "bevy_sprite",
    "bevy_text",
    "bevy_ui",
    "bevy_ui_render",
    "bevy_window",
    "bevy_winit",
    "jpeg",
    "png",
    "std",
    "tonemapping_luts",
    "webgpu",
    "x11",
    "zstd_rust",
] }
burn_human = { version = "0.3", path = "../../" }
bevy_egui = { version = "0.38", default-features = false, features = ["default_fonts", "render"] }
bevy_panorbit_camera = "0.33"
noise = "0.9"
fastrand = "2"
anyhow = "1"


[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
wasm-bindgen = "0.2"
